# graphite

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  base.h  console.h  consoleOpenGL.h  game.h  graphite.cpp  graphite.h  main.cpp  old.cpp  output.ppm
Graphite/: graphite.h
TASKS/20260415021007/: task.txt
TASKS/20260415021047/: task.txt
TASKS/20260415021133/: task.txt
TASKS/20260415021226/: task.txt
TASKS/20260415165811/: task.txt
TASKS/20260416121014/: task.txt
TASKS/20260417130328/: task.txt
TASKS/20260418171159/: task.txt
TASKS/20260418171257/: task.txt
TASKS/20260424164436/: task.txt
html/: annotated.html  annotated_dup.js  class_graphite_1_1_canvas-members.html  class_graphite_1_1_canvas.html  class_graphite_1_1_canvas.js  classes.html  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graphite_8h.html  graphite_8h.js  graphite_8h_source.html  index.html  menudata.js  namespace_graphite.html  namespace_graphite.js  namespace_graphite_1_1_colors.html  namespace_graphite_1_1_dir3_d.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  struct_graphite_1_1_camera-members.html  struct_graphite_1_1_camera.html  struct_graphite_1_1_camera.js  struct_graphite_1_1_camera_1_1_render_options-members.html  struct_graphite_1_1_camera_1_1_render_options.html  struct_graphite_1_1_camera_1_1_render_options.js  struct_graphite_1_1_color-members.html  struct_graphite_1_1_color.html  (+10 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+37 more)
testing/: bezier_test.cpp  main.cpp  remake_test.cpp  results.json
